Add modular f-k visualization tool with analysis library
- Add fk_analysis.py: Reusable library for GIF analysis
  - calculate_spatial_variation(): Extract spatial variation from GIF last frame
  - load_gif_data(): Scan and analyze all GIF files
  - Cache functionality for fast subsequent loads
  - find_gif_for_fk(): Nearest neighbor GIF search

- Add fk_click_show_gif.ipynb: Simplified interactive notebook
  - Reduced from hundreds of lines to 5 clean cells
  - Interactive f-k parameter map with spatial variation colormap
  - Click to display corresponding GIF animation
  - Theoretical bifurcation curves (Hopf, NumSoln)

- Update .gitignore: Exclude cache files (*.npz) and Python cache
- Update Makefile: Fix OpenMP library paths using symlinks
- Update README.md: Add visualization tool usage instructions

Benefits:
- Fast: Cache results for instant loading after first run
- Maintainable: Separated data processing from visualization
- Reusable: fk_analysis.py can be used by other scripts
- Simple: Clean notebook structure, easy to customize

--- a/.gitignore
+++ b/.gitignore
@@ -27,4 +27,13 @@ Thumbs.db
 
 # Output directories
 gif/
-mp4/ 
+mp4/
+
+# Cache files
+*.npz
+fk_data_cache.npz
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo 
